And that's Cucumber with real use working!

--- a/pom.xml
+++ b/pom.xml
@@ -104,15 +104,15 @@
 
 		<dependency>
 			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-java</artifactId>
-			<version>1.2.2</version>
+			<artifactId>cucumber-junit</artifactId>
+			<version>1.2.5</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>info.cukes</groupId>
-			<artifactId>cucumber-junit</artifactId>
-			<version>1.2.2</version>
+			<artifactId>cucumber-spring</artifactId>
+			<version>1.2.5</version>
 			<scope>test</scope>
 		</dependency>
 
