Fixed funcionality, now working with http requests

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,13 @@
 			<version>1.0.0.RC1</version>
 			<scope>test</scope>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20080701</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
