Modified docker file and minor changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port = 8070
+server.port = 8081
 spring.data.mongodb.database=aswdb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+url.agentsmodule=http://localhost:8080
