--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>es.uniovi.asw</groupId>
 	<artifactId>inciManager_i2a</artifactId>
-	<name>agents_i2a</name>
+	<name>inciManager_i2a</name>
 	<version>0.0.1</version>
 
 	<parent>
