--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.data.mongodb.uri=mongodb://admin:aswadmin2018@ds159489.mlab.com:59489/asw
 url.agentsmodule=http://localhost:8080
 karafka.username=rjxmkreh
 karafka.password=cqUOsLHBbxHae06K1gzSsHXcd2pVk0Oy
-kafka.servers=SASL_SSL://ark-01.srvs.cloudkafka.com:9094,SASL_SSL://ark-02.srvs.cloudkafka.com:9094
+kafka.servers=ark-01.srvs.cloudkafka.com:9094,ark-02.srvs.cloudkafka.com:9094,ark-03.srvs.cloudkafka.com:9094
 karafka.protocol=SASL_SSL
 kafka.topic=rjxmkreh-incidents
