--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
 				<version>0.7.7.201606060606</version>
 				<configuration>
 					<excludes>
-					<exclude>**/controllers/**</exclude>
+					<exclude>**/AgentsController.**</exclude>
 					<exclude>**/main/**</exclude>
 					</excludes>
 				</configuration>
