Kafka cannot be tested (the dashboard receives a foo message)

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,7 @@
 					<excludes>
 					<exclude>**/AgentsController.**</exclude>
 					<exclude>**/main/**</exclude>
+					<exclude>**/producers/**</exclude>
 					</excludes>
 				</configuration>
 				<executions>
